--- a/context101-install/package.json
+++ b/context101-install/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "description": "Install Context101 MCP server into editor config.",
   "type": "module",
-  "bin": "index.js",
+  "bin": {
+    "context101-install": "index.js"
+  },
   "license": "MIT",
   "dependencies": {
     "fs-extra": "^11.3.1"
